Add distribution cleanup and synchronization enhancements:
- Implemented `removeExpiredLocalDistributions` to delete outdated binaries, retaining the newest version and a configurable number of previous builds.
- Enabled persistence of the current distribution tag using `DistributionTagCodec`.
- Added `query` method to `ResourcesService` and `ResourcesMerger` for asset queries.
- Refactored `Templates` to consolidate and streamline string format usage.
- Enhanced `NavigableProject` to organize behaviors, apps, test cases, and scripts into folders.
- Improved `EngineImpl` to persist and restore the selected distribution tag.
- Added new tests covering distribution cleanup, serialization, and folder navigation logic.